# gtasks-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
gtasks/: __init__.py  api_client.py  app.py  cli.py  config.py  defaults.py  gtasks.py  gtasks_old.py  service.py  silly_utils.py  tasklist_cache.py  tasks_helper.py
gtasks/cli/: __init__.py  cli.py  cli_utils.py
gtasks/cli/parsers/: Untitled  add_parser.py  auth_parser.py  config_parser.py  delete_parser.py  done_parser.py  lists_parser.py  refresh_parser.py  set_default_parser.py  setup_parser.py  tasks_parser.py  use_parser.py
gtasks/client/: api_client.py  cached_api_client.py  client_factory.py  client_utils.py
gtasks/utils/: bidict_cache.py  config.py  config_manager.py  defaults.py  prompter.py  tasks_cache.py
tests/: __init__.py  test_api_client.py  test_config.py  test_silly_utils.py  test_tasklist_cache.py
tests/cli/: test_cli_utils.py  test_parsers.py
tests/client/: test_api_client.py  test_cached_api_client.py  test_client_factory.py
tests/utils/: test_bidict_cache.py  test_config.py  test_config_manager.py  test_prompter.py  test_tasks_cache.py
