[build-system]
requires = ["uv_build >= 0.9.21"]
build-backend = "uv_build"

[project]
name = "gtasks-cli"
version = "0.1.0"
description = "Google Tasks Command Line Interface"
readme = "README.md"
requires-python = ">= 3.14"
license = { text = "MIT" }
authors = [
    { name = "Nikita Filippov" },
]
dependencies = [
    "google-auth>=2.41",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.187",
    "bidict>=0.23.1",
    "pytest-mock>=3.15.1",
    "google-api-python-client-stubs>=1.31.0",
    "ty>=0.0.9",
    "pytest-cov>=7.0.0",
    "dateparser>=1.4.0",
]

[project.scripts]
gtasks = "gtasks.app:main"

# uv looks in src/gtasks_cli/__init__.py by default
[tool.uv.build-backend]
module-root = ""
module-name = "gtasks"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["gtasks"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.11",
    "types-dateparser>=1.4.0.20260408",
]
