[metadata]
name = gtasks-cli
version = attr: gtasks.__version__
description = Command-line interface for Google Tasks
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    google-auth
    google-auth-oauthlib
    google-api-python-client

[options.entry_points]
console_scripts =
    gtasks = gtasks.gtasks:main

[bdist_wheel]
universal = 0
